Fixing angular version

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "dist/component-min.js",
   "dependencies": {
-    "angular": "~1.2.0-rc.3"
+    "angular": "~1.4.0"
   },
   "devDependencies": {
     "angular-bootstrap": "~0.10.0",
